Fix hiding all scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
   user-select: none;
 }
 
-body::-webkit-scrollbarr {
+*::-webkit-scrollbar {
   display: none;
 }
 
